# queue-ti

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  commitlint.config.js  config.yaml  docker-compose.redis.yaml  docker-compose.yaml  go.mod  go.sum  go.work  go.work.sum  package-lock.json  package.json
.claude/agents/: angular-frontend-engineer.md  devops-pipeline-engineer.md  feature-strategist.md  go-backend-bdd-engineer.md  postgres-query-optimizer.md  product-monetization-strategist.md  python-library-architect.md  readme-doc-writer.md  (+1 more)
admin-ui/: Dockerfile  README.md  nginx.conf  nx.json  package-lock.json  package.json  project.json
backend/: .dockerignore  go.mod
client/: README.md  client.go  consumer.go  consumer_test.go  go.mod  go.sum  message.go  options.go  producer.go  producer_test.go  suite_test.go  token_store_test.go
clients/python/: README.md  pyproject.toml
clients/python/examples/order_pipeline/: README.md  main.py
clients/python/queueti/: __init__.py  _admin.py  _auth.py  _client.py  _consumer.py  _exceptions.py  _message.py  _options.py  _producer.py  _sync.py  _token_store.py
clients/python/queueti/pb/: queue_pb2.py  queue_pb2_grpc.py
clients/python/tests/: test_admin.py  test_auth.py  test_client.py  test_consumer.py  test_message.py  test_producer.py  test_token_store.py
docs/: index.md  package-lock.json  package.json
docs/api/: grpc.md  (+1 more)
pb/: queue.pb.go  queue_grpc.pb.go
proto/: queue.proto
scripts/: commit-msg
ui/: .dockerignore  Dockerfile  Dockerfile.release  ngsw-config.json  project.json
(+385 files in other folders)
